content/vault/v1.4.x/content/docs/commands/kv/destroy.mdx
---
layout: docs
page_title: kv destroy - Command
sidebar_title: <code>destroy</code>
description: |-
  The "kv destroy" command permanently removes the specified version data for
  the provided key and version numbers from the key-value store.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T14:43:40-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# kv destroy

~> **NOTE:** This is a [K/V Version 2](/vault/docs/secrets/kv/kv-v2) secrets
engine command, and not available for Version 1.

The `kv destroy` command permanently removes the specified versions' data
from the key/value secrets engine. If no key exists at the path, no action is
taken.

## Examples

Destroy version 11 of the key "creds":

```text
$ vault kv destroy -versions=11 secret/creds
Success! Data written to: secret/destroy/creds
```

## Usage

There are no flags beyond the [standard set of flags](/vault/docs/commands)
included on all commands.

### Output Options

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.

### Command Options

- `-versions` `([]int: <required>)` - The versions to destroy. Their data will
  be permanently deleted.
